# NMSqL

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
doc/: IR.md
doc/backend/: DBEngineProblems.md  VM.md
src/: README.md
src/backend/: Makefile
src/backend/BPTree/: .gitignore  BPTree.cpp  BPTree.h  predefined.h
src/backend/DBEngine/: CMakeLists.txt  main.cpp
src/backend/DBEngine/include/: DBEDefines.h  DBEngine.h  helloword.h
src/backend/DBEngine/src/: DBEngine.cpp  helloworld.cpp  test.cpp
src/backend/Pager/include/: pager.h
src/backend/Pager/src/: File.c  File.h  Makefile  Pager.c  Pager.h  Test.c  pager.c
src/backend/VirtualMachine/: .gitignore  Cargo.toml  README.md  build.rs
src/backend/VirtualMachine/src/: VirtualMachine.rs  lib.rs  wrapper.h  wrapper.rs
src/backend/VirtualMachine/src/VirtualMachine/: VirtualMachine.rs  VmAgg.rs  VmCursor.rs  VmList.rs  VmMem.rs  VmOp.rs  VmRunner.rs  VmSet.rs  VmSorter.rs  VmTmpCursor.rs  VmUtil.rs  mod.rs
src/backend/include/: BTreeInterface.h  DbEngineInterface.h  DbEngineInterface.hpp  PagerInterface.h  VMInterface.h  VMInterface.hpp
src/frontend/: shell.c
src/frontend/compiler/: .gitignore  Ast.hs  CodeGenerator.hs  Makefile  Parser.hs  README.md  Test.hs  package.yaml  stack.yaml
src/frontend/compiler/src/: Ast.hs  CodeGenerator.hs  FFI.hs  Instruction.hs  Parser.hs
src/frontend/compiler/src/CodeGenerator/: CodeGenerator.hs  CodeGenerator.hs-boot  CodeGeneratorUtils.hs  Expr.hs  Instruction.hs  Select.hs  TableMetadata.hs
src/frontend/compiler/src/CodeGenerator/Generator/: Delete.hs  Expr.hs  Index.hs  Insert.hs  Select.hs  Table.hs  Update.hs
src/frontend/compiler/src/FFI/: FFI.hs  FFIStructure.hs
src/frontend/compiler/src/Parser/: Ast.hs  Parser.hs
src/frontend/compiler/src/Test/: Main.hs  TestCodeGen.hs  TestCodeGenerator.hs  TestUtils.hs
src/frontend/compiler/src/Test/CodeGenerator/: Main.hs  TestCodeGenerator.hs  TestParser.hs  TestUtils.hs
src/frontend/compiler/src/Test/FFI/: FFIExport.c  FFIImport.c  Main.hs  Makefile
src/frontend/compiler/src/Test/UnitTest/: Main.hs  TestCodeGenerator.hs
src/frontend/include/: CompilerInterface.hpp
src/frontend/shell/: shell.c  shell.h
