[package]
name = "VirtualMachine"
version = "0.1.0"
authors = ["zhaoyiping"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
regex = "1"
if_chain = "1.0.1"
mockall = "0.8.3"
rand = "0.7.3"
cfg-if = "1.0.0"
intrusive-collections = "0.9.0"

[lib]
name = "VirtualMachine"
crate-type = ["cdylib","staticlib"]

